--- a/Code_space/quy_work.ipynb
+++ b/Code_space/quy_work.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f0e968e8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bcbfce90",
    "metadata": {},
    "outputs": [
@@ -26,82 +26,79 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\quydz\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "/Users/vsoma_ogh6dsk/Documents/Courses/Spring_2025/.venv/lib/python3.13/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
-      "c:\\Users\\quydz\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
+      "/Users/vsoma_ogh6dsk/Documents/Courses/Spring_2025/.venv/lib/python3.13/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "Downloading: \"https://download.pytorch.org/models/resnet50-0676ba61.pth\" to /Users/vsoma_ogh6dsk/.cache/torch/hub/checkpoints/resnet50-0676ba61.pth\n",
+      "100%|██████████| 97.8M/97.8M [00:11<00:00, 9.14MB/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Similarity with anna_image_291.jpeg: 0.5622\n",
-      "Similarity with anna_image_118.jpeg: 0.5850\n",
-      "Similarity with anna_image_225.jpeg: 0.5700\n",
-      "Similarity with anna_image_88.jpeg: 0.6628\n",
-      "Similarity with anna_image_202.jpeg: 0.5336\n",
-      "Similarity with ariel_image_151.jpeg: 0.6127\n",
-      "Similarity with ariel_image_226.jpeg: 0.5602\n",
-      "Similarity with ariel_image_185.jpeg: 0.5233\n",
-      "Similarity with ariel_image_116.jpeg: 0.5735\n",
+      "Similarity with ariel_image_231.jpeg: 0.5719\n",
+      "Similarity with ariel_image_203.jpeg: 0.6079\n",
       "Similarity with ariel_image_238.jpeg: 0.6159\n",
-      "Similarity with arura_image_374.jpeg: 0.5717\n",
-      "Similarity with arura_image_91.jpeg: 0.5717\n",
+      "Similarity with ariel_image_161.jpeg: 0.5546\n",
+      "Similarity with ariel_image_298.jpeg: 0.5960\n",
+      "Similarity with arura_image_216.jpeg: 0.5873\n",
+      "Similarity with arura_image_212.jpeg: 0.5367\n",
+      "Similarity with arura_image_207.jpeg: 0.5582\n",
       "Similarity with arura_image_214.jpeg: 0.6044\n",
-      "Similarity with arura_image_224.jpeg: 0.5858\n",
-      "Similarity with arura_image_153.jpeg: 0.5375\n",
-      "Similarity with belle_image_194.jpeg: 0.5221\n",
-      "Similarity with belle_image_249.jpeg: 0.5482\n",
-      "Similarity with belle_image_168.jpeg: 0.6819\n",
-      "Similarity with belle_image_177.jpeg: 0.6290\n",
+      "Similarity with arura_image_270.jpeg: 0.6060\n",
+      "Similarity with tiana_image_3.jpeg: 0.6244\n",
+      "Similarity with tiana_image_174.jpeg: 0.6660\n",
+      "Similarity with tiana_image_14.jpeg: 0.6589\n",
+      "Similarity with tiana_image_224.jpeg: 0.6188\n",
+      "Similarity with tiana_image_276.jpeg: 0.6125\n",
+      "Similarity with merida_image_23.jpeg: 0.6057\n",
+      "Similarity with merida_image_126.jpeg: 0.6387\n",
+      "Similarity with merida_image_14.jpeg: 0.6435\n",
+      "Similarity with merida_image_115.jpeg: 0.5984\n",
+      "Similarity with merida_image_46.jpeg: 0.6596\n",
+      "Similarity with belle_image_1.jpeg: 0.6528\n",
+      "Similarity with belle_image_278.jpeg: 0.6219\n",
+      "Similarity with belle_image_18.jpeg: 0.6182\n",
       "Similarity with belle_image_270.jpeg: 0.7000\n",
-      "Similarity with Cinderella_image_614.jpeg: 0.5829\n",
-      "Similarity with Cinderella_image_425.jpeg: 0.5566\n",
-      "Similarity with Cinderella_image_266.jpeg: 0.5157\n",
-      "Similarity with Cinderella_image_208.jpeg: 0.4897\n",
-      "Similarity with Cinderella_image_608.jpeg: 0.5433\n",
-      "Similarity with elsa_image_500.jpeg: 0.5508\n",
-      "Similarity with elsa_image_36.jpeg: 0.6054\n",
-      "Similarity with elsa_image_177.jpeg: 0.6341\n",
-      "Similarity with elsa_image_592.jpeg: 0.6656\n",
-      "Similarity with elsa_image_221.jpeg: 0.6475\n",
-      "Similarity with jasmine_image_388.jpeg: 0.5536\n",
-      "Similarity with jasmine_image_344.jpeg: 0.5447\n",
-      "Similarity with jasmine_image_253.jpeg: 0.5863\n",
-      "Similarity with jasmine_image_12.jpeg: 0.5630\n",
-      "Similarity with jasmine_image_71.jpeg: 0.6034\n",
-      "Similarity with merida_image_327.jpeg: 0.6141\n",
-      "Similarity with merida_image_359.jpeg: 0.6226\n",
-      "Similarity with merida_image_70.jpeg: 0.5763\n",
-      "Similarity with merida_image_317.jpeg: 0.5858\n",
-      "Similarity with merida_image_300.jpeg: 0.5929\n",
-      "Similarity with Raponzel_image_493.jpeg: 0.5430\n",
-      "Similarity with Raponzel_image_204.jpeg: 0.5222\n",
-      "Similarity with Raponzel_image_285.jpeg: 0.5959\n",
-      "Similarity with Raponzel_image_381.jpeg: 0.5577\n",
-      "Similarity with Raponzel_image_519.jpeg: 0.6280\n",
-      "Similarity with Snow White_image_75.jpeg: 0.6516\n",
-      "Similarity with Snow White_image_251.jpeg: 0.6492\n",
-      "Similarity with Snow White_image_135.jpeg: 0.4908\n",
-      "Similarity with Snow White_image_194.jpeg: 0.5831\n",
-      "Similarity with Snow White_image_16.jpeg: 0.6143\n",
-      "Similarity with tiana_image_307.jpeg: 0.5432\n",
-      "Similarity with tiana_image_402.jpeg: 0.5790\n",
-      "Similarity with tiana_image_316.jpeg: 0.6008\n",
-      "Similarity with tiana_image_258.jpeg: 0.6000\n",
-      "Similarity with tiana_image_395.jpeg: 0.5795\n",
+      "Similarity with belle_image_110.jpeg: 0.6198\n",
+      "Similarity with Snow White_image_160.jpeg: 0.5908\n",
+      "Similarity with Snow White_image_239.jpeg: 0.5997\n",
+      "Similarity with Snow White_image_219.jpeg: 0.4995\n",
+      "Similarity with Snow White_image_385.jpeg: 0.6141\n",
+      "Similarity with Snow White_image_240.jpeg: 0.5808\n",
+      "Similarity with elsa_image_18.jpeg: 0.5881\n",
+      "Similarity with elsa_image_17.jpeg: 0.6896\n",
+      "Similarity with elsa_image_85.jpeg: 0.6238\n",
+      "Similarity with elsa_image_11.jpeg: 0.6359\n",
+      "Similarity with elsa_image_19.jpeg: 0.6500\n",
+      "Similarity with jasmine_image_36.jpeg: 0.6208\n",
+      "Similarity with jasmine_image_24.jpeg: 0.6884\n",
+      "Similarity with jasmine_image_480.jpeg: 0.5935\n",
+      "Similarity with jasmine_image_334.jpeg: 0.6051\n",
+      "Similarity with jasmine_image_484.jpeg: 0.6025\n",
+      "Similarity with Raponzel_image_36.jpeg: 0.6220\n",
+      "Similarity with Raponzel_image_410.jpeg: 0.6140\n",
+      "Similarity with Raponzel_image_271.jpeg: 0.5924\n",
+      "Similarity with Raponzel_image_268.jpeg: 0.6040\n",
+      "Similarity with Raponzel_image_115.jpeg: 0.5750\n",
+      "Similarity with anna_image_294.jpeg: 0.5662\n",
+      "Similarity with anna_image_292.jpeg: 0.6718\n",
+      "Similarity with anna_image_293.jpeg: 0.7088\n",
+      "Similarity with anna_image_209.jpeg: 0.6337\n",
+      "Similarity with anna_image_127.jpeg: 0.6844\n",
       "\n",
-      "Most similar image: c:\\Users\\quydz\\Desktop\\data_hacks_2025\\Code_space\\..\\Datasets\\belle\\belle_image_270.jpeg (Similarity: 0.7000)\n"
+      "Most similar image: /Users/vsoma_ogh6dsk/Documents/Courses/Spring_2025/data_hacks_2025/Code_space/../Datasets/anna/anna_image_293.jpeg (Similarity: 0.7088)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\quydz\\\\Desktop\\\\data_hacks_2025\\\\Code_space\\\\..\\\\Datasets\\\\belle\\\\belle_image_270.jpeg'"
+       "'/Users/vsoma_ogh6dsk/Documents/Courses/Spring_2025/data_hacks_2025/Code_space/../Datasets/anna/anna_image_293.jpeg'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +122,7 @@
     "\n",
     "def extract_features(img_path):\n",
     "    \"\"\"Extract feature vector from an image file.\"\"\"\n",
-    "    img = Image.open(img_path).convert('RGB')\n",
+    "    img = Image.open(img_path).convert('RGB')   x\n",
     "    img_tensor = transform(img).unsqueeze(0)  # Add batch dimension\n",
     "    with torch.no_grad():\n",
     "        features = model(img_tensor).squeeze()  # Remove batch and flatten\n",
@@ -133,6 +130,7 @@
     "\n",
     "def find_most_similar(query_img_path, dataset_folder):\n",
     "    \"\"\"Find image in dataset_folder most similar to query image.\"\"\"\n",
+    "         \n",
     "    query_features = extract_features(query_img_path).reshape(1, -1)\n",
     "\n",
     "    max_similarity = -1\n",
@@ -240,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -254,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
